# cv-search-poc

./: .dockerignore  .env.example  .env.production.example  .env.test  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLANS.md  README.md  agents.md  api_server.py  app.py  docker-compose.pg.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.agent/plans/: add-whisper-transcription-cli.md  clean.md  criteria-only-parsing-and-generic-brief-guard.md  event-driven-local-inbox-watcher.md  fix-fanin-sizing-and-candidate-pooling.md  fix-hybrid-ranking-signals-idf-and-semantic-score.md  improve-structured-cv-prompt.md  ingest-gdrive-cli-integration-eval-harness.md  ingestion-more-logs.md  ingestion-one-command-runner.md  modularize-click-cli.md  persist-criteria-json-artifacts.md  presale-plan-llm-team.md  redesign-to-have-clean-agentic-testing-strategy.md  redesign-to-use-pgvector-pg-fts-with-local-docker-pg-setup-instead-of-failss-sqlite.md  redesing-integtration-test-to-run-with-redis-instead-of-in-memory-queue.md  redesing-towards-agent-development-and-testing.md  refactor-parse-request-criteria-aligned-with-ingestion.md  restructure-db-schema-for-rich-cv.md  translate-brief-to-english-before-parsing.md
.claude/: settings.json
.claude/agents/: verify-app.md
.claude/commands/: implement-feature.md  pre-pr.md  resume-feature.md  verify-endpoint.md
.claude/hooks/: stop-verify.ps1
.github/workflows/: auto-open-pr-to-upstream.yml  sync-fork.yml
.streamlit/: config.toml  secrets.toml.example
data/: cv_search.faiss
data/ingested_cvs_json/: pptx-27ebd91cce.json
data/lexicons/: domain_lexicon.json  expertise_lexicon.json  role_lexicon.json  tech_synonyms.json
data/test/: criteria.json  mock_cvs.json
docker/: docker-compose.pg.yml
pages/: 1_Presale_Plan.py  1_Project_Search.py  2_Project_Search.py  2_Single_Seat_Search.py  3_Admin_&_Ingest.py  3_Single_Seat_Search.py  4_Admin_&_Ingest.py  5_Runs.py
scripts/: deploy-vm.sh  deploy.ps1  run_agentic_suite.py  verify-fast.ps1  verify.ps1  vm-psql.ps1
src/cli/: main.py
src/cv_search/: __init__.py  api_client.py  auth_guard.py  data.py  ingestion_pipeline.py  justification.py  lexicons.py  local_embedder.py  normalize.py  parser.py  planner.py  ranking.py  retrieval.py  schema.sql  search_processor.py  settings.py  storage.py
src/cvsearch/: api_client.py  gdrive_sync.py  ingestion_pipeline.py  schema.sql  settings.py  storage.py
src/cvsearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/gui/: app.py  (+1 more)
tests/: __init__.py  test_fanin_sizing.py  test_hybrid_ranker_scoring.py  test_ingestion_watch_service.py  test_no_fallback_project_seats.py  test_openai_client_candidates.py  test_parse_request.py  test_pgvector_query.py  test_presale_plan.py  test_search_run_artifacts.py  verify_async_pipeline.py
(+113 files in other folders)
